My-web-exercise

--- a/HTML/My web page/index.html
+++ b/HTML/My web page/index.html
@@ -21,6 +21,7 @@
     <div class="main">
 
         <div class="bottom-left"><h2>History</h2></div>
+        <div class="second"><h2>Victories</h2></div>
 
         <div class="centered">
             <h1>Natus Vincere</h1>
@@ -28,9 +29,13 @@
             
         </div>
         
-
+<div class="number">
         <h1>2009</h1>
+    </div>
+    <div class="paragraf">
         <p>In October 2009, when esports was rapidly gaining popularity, and the number of championships with big prizes kept steadily increasing, a Kazakhstani patron Murat "Arbalet" Zhumashevich announced the idea of ​​creating an esports organization at the Intel Extreme Masters tournament in Dubai. Arbalet set out to create a professional team for which he will become the main sponsor: he will provide players with a training ground and will take on the financial side of the issue, starting with salaries and ending with the payment for flights. The first to respond to the proposal was starix - he was given the task of creating the star squad. On December 17, 2009, organization called Natus Vincere (from Latin - born to win) was built around the CS:GO team. It is noteworthy that initially the abbreviation NAVI was borrowed from the film "Avatar", and its final form was acquired after the competition for the team name, conducted among the fans. The first NAVI lineup included Edward, markeloff, starix, ceh9 and Zeus, with ZeroGravity becoming the manager. All the players were distinguished by high individual skill and had a lot of experience in tournaments.</p>
+    </div>
+
 
     </div>
 </body>
