My-web-exercise

--- a/HTML/My web page/index.html
+++ b/HTML/My web page/index.html
@@ -38,5 +38,11 @@
 
 
     </div>
+    <div class="button">
+        <button type="button">History</button>
+</div>
+
+        <div class="button2"><button type="button">Victories</button></div>
+    
 </body>
 </html>
