My-web-exercise

--- a/HTML/My web page/index.html
+++ b/HTML/My web page/index.html
@@ -20,9 +20,7 @@
 
     <div class="main">
 
-        <div class="bottom-left"><h2>History</h2></div>
-        <div class="second"><h2>Victories</h2></div>
-
+        
         <div class="centered">
             <h1>Natus Vincere</h1>
             <h3>An esports club founded in 2009</h3>
@@ -38,11 +36,13 @@
 
 
     </div>
-    <div class="button">
+    <div class="dugme">
         <button type="button">History</button>
 </div>
 
-        <div class="button2"><button type="button">Victories</button></div>
+        <div class="dugme2"><button type="button">Victories</button></div>
+
+        <div class="container"> <img src="./cropNAVI.jpg" alt="Avatar" class="image"> <div class="overlay"> <div class="text">Simple is the best shhhhh!</div> </div> </div>
     
 </body>
 </html>
