--- a/HTML/domaci-2/index.html
+++ b/HTML/domaci-2/index.html
@@ -27,19 +27,20 @@
 <h2>Srbija, Novi Pazar 36300</h2>
 
     <i class="fa fa-bed" aria-hidden="true" id="icon"></i>
-    <span>Kuca poseduje 3 spavace sobe </span><br><br>
+    <span class="text">Kuca poseduje 3 spavace sobe </span><br><br>
 
     <i class="fa fa-bath" aria-hidden="true" id="icon"></i>
-<span></span><br><br>
+<span class="text">Kuca poseduje 2 kupatila</span><br><br>
+
 
     <i class="fa fa-tint" aria-hidden="true" id="icon"></i>
-    <span></span><br><br>
+    <span class="text">Takodje ima bazen</span><br><br>
 
     <i class="fa fa-plus-square" aria-hidden="true" id="icon"></i>
-    <span></span><br><br>
-
+    <span class="text">Kuca ima 211m <sup>2</sup></span><br><br>
+<p>Za vise informacija pozovite na broj ispod</p>
     <i class="fa fa-volume-control-phone" aria-hidden="true" id="icon"></i>
-    <span></span><br><br>
+    <span class="text"> <strong>+381/65127876</strong> </span><br><br>
 
 </div>
 
