--- a/HTML/domaci1/index.html
+++ b/HTML/domaci1/index.html
@@ -5,12 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Lobster&display=swap" rel="stylesheet">
+
     <title>DOMACI</title>
 </head>
 <body>
     <div class="main">
-    
-        
-    </div>
+
+        <img src="../domaci-2/02C.jpg" alt="">
+   
+   <h2>Alekse Santica br.25</h2>
+   <h2>Srbija, Novi Pazar 36300</h2>
+   
+       <i class="fa fa-bed" aria-hidden="true" id="icon"></i>
+       <span class="text">Kuca poseduje 3 spavace sobe </span><br><br>
+   
+       <i class="fa fa-bath" aria-hidden="true" id="icon"></i>
+   <span class="text">Kuca poseduje 2 kupatila</span><br><br>
+   
+   
+       <i class="fa fa-tint" aria-hidden="true" id="icon"></i>
+       <span class="text">Takodje ima bazen</span><br><br>
+   
+       <i class="fa fa-plus-square" aria-hidden="true" id="icon"></i>
+       <span class="text">Kuca ima 211m <sup>2</sup></span><br><br>
+   <p>Za vise informacija pozovite na broj ispod</p>
+       <i class="fa fa-volume-control-phone" aria-hidden="true" id="icon"></i>
+       <span class="text"> <strong>+381/65127876</strong> </span><br><br>
+   
+   </div>
+   
 </body>
 </html>
