--- a/HTML/domaci1/index.html
+++ b/HTML/domaci1/index.html
@@ -20,22 +20,20 @@
    <h2>Alekse Santica br.25</h2>
    <h2>Srbija, Novi Pazar 36300</h2>
    
-       <i class="fa fa-bed" aria-hidden="true" id="icon"></i>
-       <span class="text">Kuca poseduje 3 spavace sobe </span><br><br>
-   
-       <i class="fa fa-bath" aria-hidden="true" id="icon"></i>
-   <span class="text">Kuca poseduje 2 kupatila</span><br><br>
-   
-   
-       <i class="fa fa-tint" aria-hidden="true" id="icon"></i>
-       <span class="text">Takodje ima bazen</span><br><br>
-   
-       <i class="fa fa-plus-square" aria-hidden="true" id="icon"></i>
-       <span class="text">Kuca ima 211m <sup>2</sup></span><br><br>
-   <p>Za vise informacija pozovite na broj ispod</p>
-       <i class="fa fa-volume-control-phone" aria-hidden="true" id="icon"></i>
-       <span class="text"> <strong>+381/65127876</strong> </span><br><br>
-   
+       <div class="picture">
+
+ <img src="../img/phone.gif" alt="" id="phone">
+    
+ <img src="../img/room.png" alt="" id="room">
+
+<img src="../img/bathroom.png" alt="" id="bathroom">    
+
+<img src="../img/swimming-pool.png" alt="" id="pool">
+
+<img src="../img/plus.png" alt="" id="plus">
+
+   </div>
+       
    </div>
    
 </body>
