Exercise-icon's-font's

--- a/HTML/domaci1/index.html
+++ b/HTML/domaci1/index.html
@@ -25,6 +25,7 @@
  <img src="../img/phone.gif" alt="" id="phone">
     
  <img src="../img/room.png" alt="" id="room">
+ 
 
 <img src="../img/bathroom.png" alt="" id="bathroom">    
 
@@ -32,8 +33,22 @@
 
 <img src="../img/plus.png" alt="" id="plus">
 
+
    </div>
        
+   </div>
+
+
+   <div class="text">
+
+
+<p>Kuca poseduje 3 <strong>spavace sobe</strong></p>
+<p>Kuca poseduje 2 kupatila</p>
+<p>Kuca poseduje bazen za kupanje</p>
+<p>Kuca ima 211m <sup>2</sup></p>
+<p>Za vise informacija pozovite na broj ispod</p>
+<p>+381/656868348</p>
+
    </div>
    
 </body>
