--- a/HTML/11.cas/index2.html
+++ b/HTML/11.cas/index2.html
@@ -30,4 +30,4 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam pariatur corporis eveniet, sit voluptatem magnam laboriosam numquam quo hic amet, eligendi, provident ipsam perspiciatis necessitatibus quam id fugiat? Enim, ipsum.</p>
     </div>
 </body>
-</html>
+<html>
