--- a/HTML/1.cas/index.html
+++ b/HTML/1.cas/index.html
@@ -13,3 +13,4 @@
     <p></p>
     <img src=image.png alt= wihttps://wallpapershome.com/movies/ width=104 height=142>
 </body>
+ovde je sve pocelo 😊, a sad vec 12 cas prosao
