dodatak nasem sajtu-stilizovanje margina,paddinga.....

--- a/HTML/12.cas/index2.html
+++ b/HTML/12.cas/index2.html
@@ -9,13 +9,20 @@
 </head>
 <body>
     <header>
-        <img src="../domaci-2/phone (1).png" alt="logo stranice" class="img" />
-        <div class="links">
-          <a href="https://github.com"><img src="../domaci-2/02.jpg" alt=""></a>
-          <a href="#">O nama</a>
-          <a href="#">Najnovije vesti</a>
-          <a href="#">Vremenska prognoza</a>
+         
+      
+      <div class="links">
+
+          <a href="https://github.com" target="_blank">O nama</a>|
+
+          <a href="https://www.b92.net" target="_blank">Najnovije vesti</a>|
+
+          <a href="#">Vremenska prognoza</a>|
+
           <a href="#">Kontakt stranica</a>
+
         </div>
+
+      </header>        
 </body>
 </html>
