--- a/HTML/12.cas/index2.html
+++ b/HTML/12.cas/index2.html
@@ -44,22 +44,15 @@
 <label for="password"></label>
     <input type="pass" name="password" id="password" placeholder="Unesite vasu lozinku" required><br><br>
 
-<button type="submit">Prijavite se</button><br><br>
+<button type="submit">
+  Uloguj se
+</button><br><br>
 
 <a href="">Zaboravili ste lozinku?</a><br><br><br>
 
 
-<button type="button">Napravite novi nalog</button>
-
-
+<button type="button">asasd</button>
   </form>
-
-  
-
-
-
-        
-      
     </div>
   </body>
 </html>
