--- a/HTML/12.cas/index2.html
+++ b/HTML/12.cas/index2.html
@@ -53,6 +53,12 @@
 
 <button type="button">asasd</button>
   </form>
+
     </div>
+    <footer>
+      <div class="ball1"></div>
+
+      <div class="ball2"></div>
+    </footer>
   </body>
 </html>
