--- a/HTML/18.cas/index00.html
+++ b/HTML/18.cas/index00.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">Feature</a></li>
-            <li><a href="">Price</a></li>
+            <li><a href="">Price</a></li>z
                 <li><a href="">Pages</a></li>
                     <li><a href="">Contact</a></li>
           <button>Sing Up</button>
@@ -29,6 +29,7 @@
     </header>
 
     <div class="main">
+      <!-- <img src="../My web page/NaVi.webp" alt=""> -->
       <div class="box11">
         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
 
@@ -36,8 +37,7 @@
 
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis,
-          nulla? Quod tempora quibusdam voluptatum veritatis, doloremque quas
-          voluptate iusto eaque?
+          nulla? 
         </p>
       </div>
 
@@ -46,18 +46,17 @@
         <h2>Analytic Tool</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam quia
-          nihil tempore porro voluptate provident officia error assumenda, iusto
-          eveniet.
+          nihil 
         </p>
       </div>
+      <img src="./offer.png" alt="">
       <div class="box13">
         <i class="fa fa-scissors" aria-hidden="true"></i>
 
         <h2>Professionals Tools</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio nam
-          dicta quisquam animi, neque rem consequuntur et possimus voluptatum
-          nisi.
+          dicta 
         </p>
       </div>
       <div class="box14">
@@ -65,9 +64,11 @@
         <h2>Reday Content</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque
-          voluptates natus amet eos ea! Repellat ea asperiores amet officia et.
+          volupta
         </p>
       </div>
+      <!-- <img src="../My web page/NaVi.webp" alt=""> -->
     </div>
+  
   </body>
 </html>
