--- a/JavaScript/56.cas/index.html
+++ b/JavaScript/56.cas/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
-</head>
-<body>
-    <header>To do list</header>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>LOGO</h1>
+      <input type="text" placeholder="Search" />
+    </header>
+    <div class="container" id="main">
+      <h1>Add Items</h1>
+      <input type="text">
+      <button type="submit">submit</button>
+      <ul>
+        <li>item1</li>
+        <li>item2</li>
+        <li>item3</li>
+        <li>item4</li>
+      </ul>
+    </div>
+  </body>
 </html>
