to do list in progress

--- a/JavaScript/56.cas/index.html
+++ b/JavaScript/56.cas/index.html
@@ -9,19 +9,32 @@
   </head>
   <body>
     <header>
-      <h1>LOGO</h1>
-      <input type="text" placeholder="Search" />
+      <h1>Item Lister</h1>
+      <input type="text" placeholder="Search Items..." />
     </header>
+
     <div class="container" id="main">
       <h1>Add Items</h1>
+
+      <form action="">
+
       <input type="text">
-      <button type="submit">submit</button>
+
+      <button type="submit" class="btn">submit</button>
+</div>
+<div class="main">
       <ul>
-        <li>item1</li>
-        <li>item2</li>
-        <li>item3</li>
-        <li>item4</li>
+        <li>Item 1</li> 
+        <li>Item 2</li> 
+        <li>Item 3</li>
+        <li>Item 4</li>
       </ul>
+      <button type="submit">X</button>
+      <button type="submit">X</button>
+      <button type="submit">X</button>
+      <button type="submit">X</button>
     </div>
+
+  </form>
   </body>
 </html>
