--- a/JavaScript/56.cas/index.html
+++ b/JavaScript/56.cas/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <script defer src="./app.js" ></script>
+    <title>dom</title>
   </head>
   <body>
     <header>
-      <h1>Item Lister</h1>
+      <h1 id="logo">Item Lister</h1>
       <input type="text" placeholder="Search Items..." />
     </header>
 
-    <div class="container" id="main">
-      <h1>Add Items</h1>
+    <div class="cr" id="main">
+      <h1 id="add">Add Items</h1>
 
       <form action="">
 
       <input type="text">
+      <input type="email">
 
       <button type="submit" class="btn">submit</button>
 </div>
