--- a/JavaScript/58.cas/index.html
+++ b/JavaScript/58.cas/index.html
@@ -17,7 +17,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="script.js" defer></script>
     <title>To do list</title>
   </head>
   <body>
@@ -38,6 +39,6 @@
       </div>
     </form>
     <div id="toDoContainer"></div>
-    <script src="script.js"></script>
+
   </body>
 </html>
